--- a/package.json
+++ b/package.json
@@ -9,12 +9,20 @@
     "start": "concurrently \"vite\" \"node server.mjs\"",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
+    "typecheck": "tsc --noEmit",
+    "test": "echo \"No tests configured\" && exit 0",
     "preview": "vite preview",
-    "serve": "npm run build && node server.mjs"
+    "serve": "npm run build && node server.mjs",
+    "sam:build": "sam build",
+    "sam:local": "sam local start-api --config-env dev",
+    "sam:deploy:dev": "sam build && sam deploy --config-env dev",
+    "sam:deploy:int": "sam build && sam deploy --config-env int",
+    "sam:deploy:prod": "sam build && sam deploy --config-env prod"
   },
   "dependencies": {
     "@headlessui/react": "^2.2.9",
     "@reduxjs/toolkit": "^2.11.0",
+    "aws-amplify": "^6.12.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "concurrently": "^9.2.1",
