feat: version handling and display (incl. regions)

--- a/package.json
+++ b/package.json
@@ -8,16 +8,22 @@
     "server": "node server.mjs",
     "start": "concurrently \"vite\" \"node server.mjs\"",
     "build": "tsc -b && vite build",
+    "build:dev": "VITE_ENVIRONMENT=dev npm run build",
+    "build:int": "VITE_ENVIRONMENT=int npm run build",
+    "build:prod": "VITE_ENVIRONMENT=prod npm run build",
     "lint": "eslint .",
     "typecheck": "tsc --noEmit",
     "test": "echo \"No tests configured\" && exit 0",
     "preview": "vite preview",
     "serve": "npm run build && node server.mjs",
+    "version:patch": "npm version patch --no-git-tag-version",
+    "version:minor": "npm version minor --no-git-tag-version",
+    "version:major": "npm version major --no-git-tag-version",
     "sam:build": "sam build",
     "sam:local": "sam local start-api --config-env dev",
-    "sam:deploy:dev": "sam build && sam deploy --config-env dev",
-    "sam:deploy:int": "sam build && sam deploy --config-env int",
-    "sam:deploy:prod": "sam build && sam deploy --config-env prod"
+    "sam:deploy:dev": "npm run version:patch && sam build && sam deploy --config-env dev",
+    "sam:deploy:int": "npm run version:patch && sam build && sam deploy --config-env int",
+    "sam:deploy:prod": "npm run version:patch && sam build && sam deploy --config-env prod"
   },
   "dependencies": {
     "@headlessui/react": "^2.2.9",
