--- a/package.json
+++ b/package.json
@@ -1,16 +1,14 @@
 {
   "name": "ui-template",
   "private": true,
-  "version": "1.0.0",
+  "version": "1.0.1",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "sst dev vite",
+    "dev:local": "vite",
     "server": "node server.mjs",
     "start": "concurrently \"vite\" \"node server.mjs\"",
     "build": "tsc -b && vite build",
-    "build:dev": "VITE_ENVIRONMENT=dev npm run build",
-    "build:int": "VITE_ENVIRONMENT=int npm run build",
-    "build:prod": "VITE_ENVIRONMENT=prod npm run build",
     "lint": "eslint .",
     "typecheck": "tsc --noEmit",
     "test": "echo \"No tests configured\" && exit 0",
@@ -19,11 +17,15 @@
     "version:patch": "npm version patch --no-git-tag-version",
     "version:minor": "npm version minor --no-git-tag-version",
     "version:major": "npm version major --no-git-tag-version",
-    "sam:build": "sam build",
-    "sam:local": "sam local start-api --config-env dev",
-    "sam:deploy:dev": "npm run version:patch && sam build && sam deploy --config-env dev",
-    "sam:deploy:int": "npm run version:patch && sam build && sam deploy --config-env int",
-    "sam:deploy:prod": "npm run version:patch && sam build && sam deploy --config-env prod"
+    "setup": "./scripts/setup.sh",
+    "deploy": "npm run version:patch && sst deploy",
+    "deploy:dev": "npm run version:patch && sst deploy --stage dev",
+    "deploy:int": "npm run version:patch && sst deploy --stage int",
+    "deploy:prod": "npm run version:patch && sst deploy --stage prod",
+    "remove": "sst remove",
+    "remove:dev": "sst remove --stage dev",
+    "remove:int": "sst remove --stage int",
+    "remove:prod": "sst remove --stage prod"
   },
   "dependencies": {
     "@headlessui/react": "^2.2.9",
@@ -50,6 +52,7 @@
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
+    "sst": "^3.17.24",
     "tailwindcss": "^4.1.17",
     "tw-animate-css": "^1.4.0",
     "typescript": "~5.9.3",
