--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,8 +2,14 @@ name: Deploy
 
 on:
   push:
-    branches: [main, develop]
+    branches: [main]
     tags: ['v*']
+    paths-ignore:
+      - 'docs/**'
+      - 'docs-content/**'
+      - 'mkdocs.yml'
+      - '*.md'
+      - '.github/workflows/deploy-docs.yml'
   workflow_dispatch:
     inputs:
       stage:
@@ -13,7 +19,6 @@ on:
         type: choice
         options:
           - dev
-          - int
           - prod
 
 env:
@@ -32,14 +37,13 @@ jobs:
         id: stage
         run: |
           if [[ "${{ github.event_name }}" == "workflow_dispatch" ]]; then
+            # Manual trigger - use selected stage
             STAGE="${{ github.event.inputs.stage }}"
           elif [[ "${{ github.ref }}" == refs/tags/v* ]]; then
+            # Tagged release - deploy to prod
             STAGE="prod"
-          elif [[ "${{ github.ref }}" == "refs/heads/main" ]]; then
-            STAGE="int"
-          elif [[ "${{ github.ref }}" == "refs/heads/develop" ]]; then
-            STAGE="dev"
           else
+            # Push to main - deploy to dev
             STAGE="dev"
           fi
 
@@ -52,7 +56,13 @@ jobs:
     name: Deploy with SST
     runs-on: ubuntu-latest
     needs: determine-stage
-    environment: ${{ needs.determine-stage.outputs.stage }}
+    # Environment provides:
+    # 1. Protection rules (required reviewers for int/prod)
+    # 2. Environment-specific secrets (AWS_ACCESS_KEY_ID, AWS_SECRET_ACCESS_KEY)
+    # 3. Deployment history tracking
+    environment:
+      name: ${{ needs.determine-stage.outputs.stage }}
+      url: ${{ steps.outputs.outputs.web_url }}
     outputs:
       web_url: ${{ steps.outputs.outputs.web_url }}
       api_url: ${{ steps.outputs.outputs.api_url }}
@@ -69,6 +79,8 @@ jobs:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
+          # Secrets are pulled from the environment (dev/int/prod)
+          # This allows different AWS accounts per environment
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ env.AWS_REGION }}
@@ -116,7 +128,6 @@ jobs:
     name: Smoke Tests
     runs-on: ubuntu-latest
     needs: [determine-stage, deploy]
-    environment: ${{ needs.determine-stage.outputs.stage }}
     steps:
       - name: Run health checks
         run: |
